--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,12 @@
 .main-content {
-    margin: 4rem 2.5rem;
-    grid-row: 2/3;
-    /* display: flex; */
-   
+    grid-area: main;   
 }
-.main-footer {
-    grid-row: 3/4;
-    padding: 0;
-}
+
 div#root {
     display: grid;
     height: 100%;
     grid-template-rows: 3.5rem auto 5rem;
+    grid-template-areas: "header"
+                         "main"
+                         "footer";
 }
