--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,11 @@
 .main-content {
-    grid-area: main;   
+    grid-area: main;
 }
 
 div#root {
     display: grid;
     height: 100%;
-    grid-template-rows: 3.5rem auto 5rem;
-    grid-template-areas: "header"
-                         "main"
+    grid-template-rows:   auto 5rem;
+    grid-template-areas: "main"
                          "footer";
 }
