--- a/frontend/src/components/Navigation/MainNavigation.css
+++ b/frontend/src/components/Navigation/MainNavigation.css
@@ -4,10 +4,25 @@
     top: 0;
     width: 100%;
     height: 3.5rem;
+    background: transparent;
+    color: white;
+    display: flex;
+    align-items: center;
+    z-index: 3;
+    transition: background-color 1s ease;
+}
+
+.main-navigation.solid {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 3.5rem;
     background: white;
     display: flex;
     align-items: center;
     z-index: 3;
+    transition: background-color 1s ease;
 }
 
 .main-navigation__logo h1 {
@@ -35,6 +50,11 @@
 }
 
 .main-navigation__items a {
+    text-decoration: none;
+    color: white;
+}
+
+.main-navigation__items a.solid {
     text-decoration: none;
     color: black;
 }
