reducing transition time of navigation bar

--- a/frontend/src/components/Navigation/MainNavigation.css
+++ b/frontend/src/components/Navigation/MainNavigation.css
@@ -9,7 +9,8 @@
     display: flex;
     align-items: center;
     z-index: 3;
-    transition: background-color 1s ease;
+    transition: background-color 0.3s ease;
+    box-shadow: none;
 }
 
 .main-navigation.solid {
@@ -22,7 +23,8 @@
     display: flex;
     align-items: center;
     z-index: 3;
-    transition: background-color 1s ease;
+    transition: background-color 0.3s ease;
+    box-shadow: rgb(72,72,72) 0px 1px 6px;
 }
 
 .main-navigation__logo h1 {
