--- a/frontend/src/components/Navigation/MainNavigation.css
+++ b/frontend/src/components/Navigation/MainNavigation.css
@@ -3,7 +3,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 3.5rem;
+    height: 5rem;
     background: transparent;
     color: white;
     display: flex;
@@ -18,7 +18,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 3.5rem;
+    height: 5rem;
     background: white;
     display: flex;
     align-items: center;
@@ -54,11 +54,13 @@
 .main-navigation__items a {
     text-decoration: none;
     color: white;
+    font-weight: 600;
 }
 
-.main-navigation__items a.solid {
+.main-navigation.solid .main-navigation__items a {
     text-decoration: none;
     color: black;
+    font-weight: 600;
 }
 
 .main-navigation__items a:hover,
