--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i,800,800i%7CRaleway:400,400i,500,500i,600,600i,700,700i,800,800i');
 body {
   margin: 0;
   padding:0;
-  font-family: sans-serif;
+  font-family: "Raleway", sans-serif;
   height: 100%;
 }
 
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
